# financial_intelligence_swarm

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  demo_presentation.md  main.py  pyproject.toml  railway.json  requirements-local.txt  requirements-prod.txt  requirements.txt
backend/: __init__.py  config.py  graph.py  llm_provider.py  main.py  middleware.py  pdf_generator.py  store.py  websocket_handler.py
backend/agents/: __init__.py  compliance_reviewer.py  judge.py  monitor.py  partner_fraud.py  prosecutor.py  reconciliation.py  skeptic.py
backend/loaders/: __init__.py  load_graph.py  load_memory.py  load_vectors.py  main.py
backend/models/: __init__.py  state.py
backend/routers/: approval.py  compliance.py  monitor.py  partners.py  reconciliation.py
backend/tools/: __init__.py  tools_alerts.py  tools_docs.py  tools_graph.py  tools_iso.py  tools_memory.py
data/data_gen/: 01_gen_iso_ingestion.py  02_gen_graph_topology.py  03_gen_history_drift.py  04_gen_unstructured.py  05_gen_closing_loop.py  06_gen_refs.py  07_gen_infra.py  08_gen_db_setup.py
docker/: README.md  docker-compose.yml  start.bat  start.sh
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: page.tsx
scripts/: check_stream.py  demo.py  demo_check.py  diagnose.py  verify_reporting.py
skills/compliance-rag/: SKILL.md
skills/graph-investigator/: SKILL.md
skills/iso-20022/: SKILL.md
tests/: __init__.py  conftest.py  test_e2e_target_uetr.py  test_graph.py  test_iso_parsing.py  test_state.py  test_workflow_integration.py
(+22 files in other folders)
